# btsp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.production.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_identity_rbac.py  0003_store_operational_fields.py  0004_store_audit_fields.py  0005_configuration_entries.py  (+23 more)
backend/app/: main.py
backend/scripts/: __init__.py  validate_001s_live.py  validate_001t_acknowledgements.py  validate_001t_foundation.py  validate_001t_security.py  validate_001u_integrity.py  validate_001w_integrity.py
backend/tests/: test_001p_integration.py  test_admin_integrity.py  test_analytics.py  test_approval_policy_service.py  test_audit_reporting_service.py  test_auth_security.py  test_bpp_purchasing.py  test_catalog_routes.py  test_configuration_defaults.py  test_configuration_schema.py  test_core_config.py  test_flow_schema.py  test_health.py  test_identity_seed_defaults.py  test_independent_purchasing.py  test_invoice_matching.py  test_notification_service.py  test_permissions.py  test_purchase_order_routes.py  test_purchasing_domain.py  test_receiving.py  test_release_seed_idempotency.py  test_role_admin_service.py  test_snapshot_schema.py  test_store_batch_service.py  test_store_service.py  test_user_admin_schema.py  test_vendor_integration.py  test_workflow_admin_service.py  test_workflow_engine.py  test_workflow_registry_schema.py  test_workflow_routes.py  test_workflows.py
(+258 files in other folders)
